ros2_ws/log/build_2026-03-08_08-58-08/coverage_webots/stderr.log
  File "/root/ros2_ws/install/coverage_webots/lib/python3.10/site-packages/coverage_webots/coverage_controller.py", line 239
    main()r
          ^
SyntaxError: invalid syntax

